--- a/.github/workflows/semgrep.yml
+++ b/.github/workflows/semgrep.yml
@@ -1,15 +1,13 @@
 on:
-  workflow_dispatch: {}
-  pull_request: {}
+  pull_request:
+    branches: [ "master" ]
   push:
-    branches:
-    - main
-    - master
+    branches: ["main","master"]
     paths:
     - .github/workflows/semgrep.yml
   schedule:
   # random HH:MM to avoid a load spike on GitHub Actions at 00:00
-  - cron: 32 14 * * *
+  - cron: 4 0 * * *
 name: Semgrep
 jobs:
   semgrep:
